// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTextField should mount component and match snapshot 1`] = `
<div class="v-input v-input--primary">
  <div class="v-input__label">
    <label class="v-label v-label--on-input">
    </label>
  </div>
  <div class="v-input__text-field">
    <div class="v-text-field">
      <input class="v-text-field__input"
             type="text"
      >
    </div>
  </div>
  <div class="v-input__hints">
    <transition-stub>
    </transition-stub>
  </div>
</div>
`;

exports[`VTextField should test disabled state 1`] = `
<div class="v-input v-input--disabled">
  <div class="v-input__label">
    <label class="v-label v-label--disabled v-label--on-input">
      email
    </label>
  </div>
  <div class="v-input__text-field">
    <div class="v-text-field v-text-field--disabled">
      <input class="v-text-field__input"
             disabled
             type="text"
      >
    </div>
  </div>
  <div class="v-input__hints">
    <transition-stub>
    </transition-stub>
  </div>
</div>
`;
